# log-watch

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: release-please-config.json  renovate.json
.github/workflows/: ci.yml  release-please.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
