[package]
name = "log-watch"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A CLI tool to tail multiple log files including newly created ones"
repository = "https://github.com/holzgeist/log-watch"  # if applicable
keywords = ["cli", "log", "tail", "watch", "files"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
notify = "8.2.0"
thiserror = "2.0.14"
