[package]
name = "log-watch"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A CLI tool to tail multiple log files including newly created ones"
repository = "https://github.com/holzgeist/log-watch"  # if applicable
keywords = ["cli", "log", "tail", "watch", "files"]
categories = ["command-line-utilities"]

[lib]
name = "log_watch"
path = "src/lib.rs"

[[bin]]
name = "log-watch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
notify = "8.2.0"
thiserror = "2.0.14"

[dev-dependencies]
tempfile = "3.14"
